# ReArk

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
resources/translations/: reark_zh_CN.ts
samples/: 遥遥领先.hap
src/: CMakeLists.txt
src/controller/: AgentController.cpp  AgentController.h  AgentKnowledgeController.cpp  AgentKnowledgeController.h  AgentSettings.cpp  AgentSettings.h  DecompilerController.cpp  DecompilerController.h  SettingsController.cpp  SettingsController.h  UpdateController.cpp  UpdateController.h
src/core/: AppInitializer.cpp  AppInitializer.h  HyleDecompiler.cpp  HyleDecompiler.h
src/model/: SourceTreeModel.cpp  SourceTreeModel.h
src/presentation/: MarkdownRenderer.cpp  MarkdownRenderer.h
src/ui/qml/: main.qml
src/ui/qml/ReArk/: AppMenuBar.qml  Icon.qml  MainWorkspace.qml  MarkdownMessage.qml  SettingsPage.qml  SmartAnalysisPage.qml  UpdateWindow.qml  WindowTitleBar.qml  WindowTitleButton.qml
